tests/diagnostics/string_cmp_number.kal
# A string can only be compared with another string, not a number.
{ printi(if "a" == 5 then 1 else 0); };
